--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ description: > # this means to ignore newlines until "baseurl:"
   A place for learning about technology
 github_username: leobagua
 show_excerpts: true
+paginate: 10
+paginate_path: "/blog/page:num/"
